# graph_computation

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
3p/: CMakeLists.txt  mpk_mix
agc_app/src/: CMakeLists.txt  activation_node_registry.cpp  alg_lib.cpp  linspace.cpp
agc_app/src/alg/: linspace.cpp
agc_app/src/nodes/: canvas.cpp  counter.cpp  func_iterator.cpp  grid_2d.cpp  linspace.cpp  mag2.cpp  mandelbrot_func.cpp  printer.cpp  replicate.cpp  scale.cpp  split.cpp  threshold.cpp
agc_app/src/types/: canvas.cpp
agc_app/test/: CMakeLists.txt  generated_example.cpp  generated_mandelbrot.cpp  test_agc_app_graph.cpp  test_agc_app_nodes.cpp
agc_perf/: CMakeLists.txt
agc_perf/benchmarks/: CMakeLists.txt  bm_mandelbrot.cpp
agc_perf/src/: CMakeLists.txt  canvas.cpp  mandelbrot-fine-goto-graph.cpp  mandelbrot-fine-graph-2.cpp  mandelbrot-fine-graph-3.cpp  mandelbrot-fine-graph-4.cpp  mandelbrot-fine-graph-5.cpp  mandelbrot-fine-graph-6.cpp  mandelbrot-fine-graph.cpp  mandelbrot-ref.cpp
agc_perf/test/: CMakeLists.txt  test_mandelbrot.cpp
agc_rt/src/: CMakeLists.txt
agc_rt/src/nodes/: linspace.cpp
agc_rt/src/types/: canvas.cpp
cmake/: FindFFMpeg.cmake  gc_build_lib_config.cmake  gc_build_lib_config.sh
examples/: cell2d_life.gc  life.gc  primes_rect_view.gc  primes_spiral_view.gc  waring_rect_view.gc
gc/src/: CMakeLists.txt  edge.cpp  expect_n_node_args.cpp  graph_computation.cpp  load_yaml.cpp  node_port_names.cpp  node_registry.cpp  parse_simple_value.cpp  source_inputs.cpp  source_param.cpp  type.cpp  type_registry.cpp  value.cpp  value_path.cpp
gc/src/agc/: algorithm.cpp
gc/src/common/: expr_calculator.cpp
gc/src/common/detail/: ind.cpp
gc/src/detail/: parse_node_port.cpp
gc/src/dlib/: module.cpp
gc/src/gc/: activation_graph.cpp  activation_node.cpp  alg_known_types.cpp  algorithm.cpp  computation_node_registry.cpp  edge.cpp  generate_dot.cpp  graph_computation.cpp  node_registry.cpp  simple_graph_util.cpp  source_inputs.cpp
gc/src/gc/detail/: parse_node_port.cpp
gc/src/yaml/: parse_graph.cpp  parse_value.cpp
gc/test/: CMakeLists.txt  main.cpp  test_algorithm.cpp  test_binomial.cpp  test_build.cpp  test_enum_flags.cpp  test_expr_calculator.cpp  test_fast_pimpl.cpp  test_func_ref.cpp  test_gc.cpp  test_gc_nodes.cpp  test_gc_type_value.cpp  test_holder.cpp  test_index_set.cpp  test_linked_list.cpp  test_nested_seq.cpp  test_parse_simple_value.cpp  test_pow2.cpp  test_ring_buffer.cpp  test_strong.cpp
gc_app/: CMakeLists.txt
gc_app/src/: CMakeLists.txt  color.cpp  computation_node_registry.cpp  eratosthenes_sieve.cpp  filter_seq.cpp  multiply.cpp  node_registry.cpp  palette.cpp  project.cpp  rect_view.cpp  source_param.cpp  spiral_view.cpp  test_sequence.cpp  type_registry.cpp  uint_size.cpp  waring.cpp  waring_parallel.cpp
gc_app/src/cell_aut/: life.cpp
gc_app/src/nodes/cell_aut/: cell2d.cpp  gen_cmap_reader.cpp  gen_rule_reader.cpp  generate_cmap.cpp  generate_rules.cpp  life.cpp  offset_image.cpp  random_image.cpp  rule_reader.cpp
gc_app/src/nodes/num/: eratosthenes_sieve.cpp  filter_seq.cpp  multiply.cpp  test_sequence.cpp  waring.cpp  waring_parallel.cpp
gc_app/src/nodes/util/: merge.cpp  project.cpp  uint_size.cpp
gc_app/src/nodes/visual/: image_colorizer.cpp  image_loader.cpp  rect_view.cpp  spiral_view.cpp
gc_app/src/types/: color.cpp  palette.cpp
gc_app/test/: CMakeLists.txt  build_data.sh  main.cpp  test_gc_app_nodes.cpp  test_gc_load_graph.cpp  test_gc_other.cpp  test_gc_parse_graph.cpp
gc_app/test/data/: hunt.gen  mid.gen  program.cf
gc_cli/: CMakeLists.txt  main.cpp
gc_types/src/: CMakeLists.txt  color.cpp  live_time_series.cpp  palette.cpp
gc_types/test/: CMakeLists.txt  test_live_time_series.cpp  test_multi_index.cpp
gc_visual/: CMakeLists.txt
gc_visual/src/: CMakeLists.txt  bitmap_view.cpp  cell2d_rule_editor_widget.cpp  cell2d_rule_map_view.cpp  color_editor_widget.cpp  computation_progress_widget.cpp  computation_thread.cpp  evolution_controller.cpp  flatten_type.cpp  graph_bindings.cpp  graph_broker.cpp  graph_evolution.cpp  graph_output_visualizer.cpp  graph_parameter_editor.cpp  invalidate_button.cpp  main.cpp  mainwindow.cpp  parameter_editor_widget.cpp  parse_graph_binding.cpp  parse_layout.cpp  simple_presentation.cpp  spiral_presentation.cpp  vector_editor_widget.cpp  vector_item_model.cpp  video_recorder.cpp  wait_widget.cpp
gc_visual/src/editors/: cell2d_gen_cmap_editor_widget.cpp  cell2d_gen_rule_editor_widget.cpp  cell2d_rule_editor_widget.cpp  color_editor_widget.cpp  file_picker_widget.cpp  flags_editor_widget.cpp  list_editor_widget.cpp  parameter_editor_widget.cpp  spin_editor_widget.cpp  vector_editor_widget.cpp  vector_item_model.cpp
gc_visual/src/plot/: layout.cpp
gc_visual/src/visualizers/: image_metrics_visualizer.cpp  image_visualizer.cpp  text_visualizer.cpp  visualizer_widget.cpp
gc_visual/src/widgets/: bitmap_view.cpp  cell2d_rule_map_view.cpp  computation_progress_widget.cpp  evolution_controller.cpp  graph_output_visualizer.cpp  graph_parameter_editor.cpp  image_metrics_view.cpp  invalidate_button.cpp
hello_gl_plot/src/: CMakeLists.txt  gl_plot_widget.cpp  gl_plot_widget.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp
lib_config/src/: CMakeLists.txt  lib_config.cpp
misc/: agc_perf_mandelbrot.ods  agc_todo.md  in.gc  run_gc_cli_n.sh  waring_numbers.ods  waring_parallel_perf.ods
plot_visual/src/: CMakeLists.txt  layout.cpp  live_time_series.cpp  time_series_renderer.cpp
plot_visual/src/detail/: draw_error_message.cpp
plot_visual/src/opengl/: time_series_visualizer.cpp  visualizer.cpp
plot_visual/src/painter/: time_series_histogram_visualizer.cpp  time_series_visualizer.cpp  visualizer.cpp
plot_visual/test/: CMakeLists.txt  test_live_time_series.cpp
sieve/src/: CMakeLists.txt  computation_node_registry.cpp  type_registry.cpp
sieve/src/algorithms/: image_metrics.cpp
sieve/src/nodes/: i8_image_metrics.cpp
sieve/src/types/: i8_range.cpp  image_metrics.cpp
sieve/test/: CMakeLists.txt  test_sieve_algorithms.cpp  test_sieve_nodes.cpp
(+451 files in other folders)
